[gd_scene load_steps=16 format=3 uid="uid://y5kltus7snue"]

[ext_resource type="Texture2D" uid="uid://dhaqfafsqcchu" path="res://Asset/Character/Enemies/Night_borne/NightBorne.png" id="1_pmg75"]
[ext_resource type="Script" uid="uid://da67b1t2vgg8r" path="res://Scene/Enemies/NightBorne/night_borne.gd" id="1_shu4n"]
[ext_resource type="PackedScene" uid="uid://dh0evrnvk3svq" path="res://Scene/Hurt_Box_And_Hit_Box/hurt_box.tscn" id="3_e3kqx"]
[ext_resource type="PackedScene" uid="uid://biuyex687rtrb" path="res://Scene/Hurt_Box_And_Hit_Box/hit_box.tscn" id="4_1rdsj"]

[sub_resource type="Animation" id="Animation_1rdsj"]
resource_name = "Attack"
length = 1.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hit_Box/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_2n8mm"]
resource_name = "Death"
length = 2.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 90]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hit_Box:collision_layer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hurt_Box:collision_mask")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("..:collision_layer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_k5y1a"]
resource_name = "Hurt"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [69, 70, 71, 72, 73]
}

[sub_resource type="Animation" id="Animation_shu4n"]
resource_name = "Idle"
length = 0.9
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attack_zone/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true, false, true, false, true]
}

[sub_resource type="Animation" id="Animation_k2872"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hit_Box/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..:collision_layer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hurt_Box:collision_mask")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Hit_Box:collision_layer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Attack_zone/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_e3kqx"]
resource_name = "Walk"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [23, 24, 25, 26, 27, 28]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attack_zone/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.195008, 0.3, 0.4, 0.509884, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y4f4q"]
_data = {
&"Attack": SubResource("Animation_1rdsj"),
&"Death": SubResource("Animation_2n8mm"),
&"Hurt": SubResource("Animation_k5y1a"),
&"Idle": SubResource("Animation_shu4n"),
&"RESET": SubResource("Animation_k2872"),
&"Walk": SubResource("Animation_e3kqx")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k5y1a"]
radius = 8.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e3kqx"]
size = Vector2(43, 61)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1rdsj"]
size = Vector2(39, 58)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pmg75"]
size = Vector2(14, 25)

[node name="NightBorne" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_shu4n")

[node name="Body" type="Node2D" parent="."]
scale = Vector2(-1, 1)

[node name="Sprite2D" type="Sprite2D" parent="Body"]
position = Vector2(-2, -9)
texture = ExtResource("1_pmg75")
hframes = 23
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Body"]
libraries = {
&"": SubResource("AnimationLibrary_y4f4q")
}

[node name="Hurt_Box" parent="Body" instance=ExtResource("3_e3kqx")]
collision_layer = 0
collision_mask = 8
max_health = 250.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Hurt_Box"]
shape = SubResource("CapsuleShape2D_k5y1a")

[node name="Hit_Box" parent="Body" instance=ExtResource("4_1rdsj")]
position = Vector2(20, -8)
collision_layer = 16
collision_mask = 0
damage = 30.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Hit_Box"]
position = Vector2(-4.5, -3.5)
shape = SubResource("RectangleShape2D_e3kqx")
disabled = true

[node name="Attack_zone" type="Area2D" parent="Body"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Attack_zone"]
position = Vector2(15.5, -12)
shape = SubResource("RectangleShape2D_1rdsj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_pmg75")

[connection signal="area_entered" from="Body/Hurt_Box" to="." method="_on_hurt_box_area_entered"]
[connection signal="health_depleated" from="Body/Hurt_Box" to="." method="_on_hurt_box_health_depleated"]
[connection signal="body_entered" from="Body/Attack_zone" to="." method="_on_attack_zone_body_entered"]
[connection signal="body_exited" from="Body/Attack_zone" to="." method="_on_attack_zone_body_exited"]
